# baxter-object-manipulation

./: CMakeLists.txt  README.md  package.xml
resources/: planningtest.configs  robotWorld.xml
scripts/: baxter_controller.py  baxter_planner.py  baxter_visual_planner.py  motion_controller.py  robot_publisher.py  test_world_creation.py
scripts/resources/: planningtest.configs
src/: publisher.cpp  simple_sim.cpp
